<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name" translatable="false">Hacker\'s Keyboard</string>
    <string name="english_ime_settings" translatable="false">Settings for Hacker\'s Keyboard</string>
    <string name="english_ime_input_options" translatable="false">Input options</string>
    <string name="title_keyboard_view_settings" translatable="false">Keyboard view settings</string>
    <string name="title_keyboard_height_portrait" translatable="false">Keyboard height, portrait</string>
    <string name="title_keyboard_height_landscape" translatable="false">Keyboard height, landscape</string>
    <string name="title_key_layout_options" translatable="false">Key layout options</string>
    <string name="title_key_behavior_settings" translatable="false">Key behavior settings</string>
    <string name="title_long_press_alternate_keys" translatable="false">Long-press alternate keys</string>
    <string name="title_suggested_punctuation" translatable="false">Suggested punctuation</string>
    <string name="title_input_mode_settings" translatable="false">Input mode settings</string>
    <string name="title_debugging" translatable="false">Debugging</string>
    <string name="title_input_connection_details" translatable="false">Input connection details</string>
    <string name="title_version" translatable="false">Version</string>
    <string name="title_swipe_gestures" translatable="false">Swipe gestures (experimental)</string>
    <string name="title_hardware_key_actions" translatable="false">Hardware key actions</string>
    <string name="vibrate_on_keypress" translatable="false">Vibrate on keypress</string>
    <string name="sound_on_keypress" translatable="false">Sound on keypress</string>
    <string name="popup_on_keypress" translatable="false">Popup on keypress</string>
    <string name="hit_correction" translatable="false">Correct typing errors</string>
    <string name="hit_correction_summary" translatable="false">Enable input error correction</string>
    <string name="hit_correction_land" translatable="false">Landscape input errors</string>
    <string name="hit_correction_land_summary" translatable="false">Enable input error correction</string>
    <string name="auto_correction" translatable="false">Word suggestions</string>
    <string name="auto_correction_summary" translatable="false">Automatically correct the previous word</string>
    <string name="tip_to_open_keyboard" translatable="false"><b>"The keyboard opens anytime you touch a text field"</b></string>
    <string name="tip_to_view_accents" translatable="false"><b>"Touch and hold a key to display diacritical marks (ø, ö, ô, ó, and so on)"</b></string>
    <string name="tip_to_open_symbols" translatable="false"><b>"Switch to numbers and symbols by touching this button"</b></string>
    <string name="tip_to_close_symbols" translatable="false"><b>"You can go back to the characters by touching this key again"</b></string>
    <string name="tip_to_launch_settings" translatable="false"><b>"Touch and hold this key to change keyboard settings, such as autocomplete"</b></string>
    <string name="tip_to_start_typing" translatable="false"><b>"Try it!"</b></string>
    <string name="open_the_keyboard" translatable="false"><font size="17"><b>"Open the keyboard"\n</b></font><font size="3">\n</font>"Touch any text field."</string>
    <string name="prediction" translatable="false">Word suggestions</string>
    <string name="prediction_category" translatable="false">Word suggestion settings</string>
    <string name="prediction_summary" translatable="false">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title" translatable="false">Auto completion</string>
    <string name="prediction_landscape" translatable="false">Increase text field size</string>
    <string name="prediction_landscape_summary" translatable="false">Hide word suggestions in landscape view</string>
    <string name="auto_cap" translatable="false">Auto-capitalization</string>
    <string name="auto_cap_summary" translatable="false">Capitalize the start of a sentence</string>
    <string name="auto_punctuate" translatable="false">Auto-punctuate</string>
    <string name="auto_punctuate_summary" translatable="false"></string>
    <string name="quick_fixes" translatable="false">Quick fixes</string>
    <string name="quick_fixes_summary" translatable="false">Corrects commonly typed mistakes</string>
    <string name="show_suggestions" translatable="false">Show suggestions</string>
    <string name="show_suggestions_summary" translatable="false">Display suggested words while typing</string>
    <string name="auto_complete" translatable="false">Auto-complete</string>
    <string name="auto_complete_summary" translatable="false">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="prefs_settings_key" translatable="false">Show settings key</string>
    <string-array name="settings_key_modes_values" translatable="false">
        <item>@string/settings_key_mode_auto</item>
        <item>@string/settings_key_mode_always_show</item>
        <item>@string/settings_key_mode_always_hide</item>
    </string-array>
    <string name="settings_key_mode_auto_name" translatable="false">Automatic</string>
    <string name="settings_key_mode_always_show_name" translatable="false">Always show</string>
    <string name="settings_key_mode_always_hide_name" translatable="false">Always hide</string>
    <string-array name="settings_key_modes" translatable="false">
        <item>@string/settings_key_mode_auto_name</item>
        <item>@string/settings_key_mode_always_show_name</item>
        <item>@string/settings_key_mode_always_hide_name</item>
    </string-array>
    <string name="bigram_suggestion" translatable="false">Bigram Suggestions</string>
    <string name="bigram_suggestion_summary" translatable="false">Use previous word to improve suggestion</string>
    <string-array name="prediction_modes" translatable="false">
        <item>None</item>
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="prediction_none" translatable="false">0</string>
    <string name="prediction_basic" translatable="false">1</string>
    <string name="prediction_full"  translatable="false">2</string>
    <string-array name="prediction_modes_values" translatable="false">
        <item>@string/prediction_none</item>
        <item>@string/prediction_basic</item>
        <item>@string/prediction_full</item>
    </string-array>
    <string name="added_word" translatable="false"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="tip_long_press" translatable="false">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss" translatable="false">Press the back key \u21B6 to close the keyboard at any point</string>
    <string name="tip_access_symbols" translatable="false">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary" translatable="false">Press and hold the left-most word to add it to the dictionary
        </string>
    <string name="touch_to_continue" translatable="false">Touch this hint to continue »</string>
    <string name="touch_to_finish" translatable="false">Touch here to close this hint and start typing!</string>
    <string name="label_go_key" translatable="false">Go</string>
    <string name="label_next_key" translatable="false">Next</string>
    <string name="label_done_key" translatable="false">Done</string>
    <string name="label_send_key" translatable="false">Send</string>
    <string name="label_symbol_key" translatable="false">\?123</string>
    <string name="label_phone_key" translatable="false">123</string>
    <string name="label_alpha_key" translatable="false">ABC</string>
    <string name="label_alt_key" translatable="false">ALT</string>
    <string name="voice_warning_title" translatable="false">Voice input</string>
    <string name="voice_warning_locale_not_supported" translatable="false">Voice input is not currently supported for your language, but does work in English.</string>
    <string name="voice_warning_may_not_understand" translatable="false">Voice input is an experimental feature using Google\'s networked speech recognition.</string>
    <string name="voice_warning_how_to_turn_off" translatable="false">To turn off voice input, go to keyboard settings.</string>
    <string name="voice_hint_dialog_message" translatable="false">To use voice input, press the microphone button or slide your finger across the on-screen keyboard.</string>
    <string name="voice_listening" translatable="false">Speak now</string>
    <string name="voice_working" translatable="false">Working</string>
    <string name="voice_initializing" translatable="false"></string>
    <string name="voice_error" translatable="false">Error. Please try again.</string>
    <string name="popular_domain_1" translatable="false">".net"</string>
    <string name="popular_domain_2" translatable="false">".org"</string>
    <string name="popular_domain_3" translatable="false">".gov"</string>
    <string name="popular_domain_4" translatable="false">".edu"</string>
    <string name="pref_screen_feedback_title" translatable="false">Key feedback settings</string>
    <string name="pref_screen_view_title" translatable="false">Theme and label settings</string>
    <string name="keyboard_layout" translatable="false">Keyboard Theme</string>
    <string name="title_hint_mode" translatable="false">Labeled alternate keys</string>
    <string name="default_hint_mode" translatable="false">1</string>
    <string name="title_top_row_scale" translatable="false">5th row height adjustment</string>
    <string name="title_label_scale" translatable="false">Key label scaling</string>
    <string name="title_candidate_scale" translatable="false">Suggestion label scaling</string>
    <string name="title_vibrate_len" translatable="false">Vibrate duration</string>
    <string name="title_click_volume" translatable="false">Key click volume</string>
    <string name="default_click_volume" translatable="false">0.2</string>
    <string name="title_click_method" translatable="false">Click volume control method</string>
    <string name="default_click_method" translatable="false">0</string>
    <string name="title_render_mode" translatable="false">Drawing method</string>
    <string name="pref_screen_actions_title" translatable="false">Gesture and key actions</string>
    <string name="title_swipe_up" translatable="false">Swipe up</string>
    <string name="title_swipe_down" translatable="false">Swipe down</string>
    <string name="title_swipe_left" translatable="false">Swipe left</string>
    <string name="title_swipe_right" translatable="false">Swipe right</string>
    <string name="title_vol_up" translatable="false">Volume up</string>
    <string name="title_vol_down" translatable="false">Volume down</string>
    <string name="default_swipe_up" translatable="false">extension</string>
    <string name="default_swipe_down" translatable="false">close</string>
    <string name="default_swipe_left" translatable="false">none</string>
    <string name="default_swipe_right" translatable="false">none</string>
    <string name="default_vol_up" translatable="false">none</string>
    <string name="default_vol_down" translatable="false">none</string>
    <string name="main_setup_configure_imes" translatable="false">Enable keyboard</string>
    <string name="main_setup_set_ime" translatable="false">Set input method</string>
    <string name="main_setup_get_dicts" translatable="false">More</string>
    <string name="main_setup_input_lang" translatable="false">Input languages</string>
    <string name="seek_pref_0" translatable="false">0%</string>
    <string name="seek_pref_val" translatable="false">x%</string>
    <string name="seek_pref_max" translatable="false">100%</string>
</resources>