<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<!--
	  <TextView android:layout_height="wrap_content" android:id="@+id/main_intro"
		  android:text="@string/english_ime_name" android:layout_width="wrap_content"
		  android:textStyle="bold" android:textSize="25sp"></TextView>
	-->
	<TableLayout android:layout_width="match_parent"
		android:id="@+id/main_linear1" android:layout_height="wrap_content">
		<TableRow>
			<Button android:text="@string/main_setup_configure_imes"
				android:id="@+id/main_setup_btn_configure_imes"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
			<Button android:text="@string/main_setup_input_lang"
				android:id="@+id/main_setup_btn_input_lang" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></Button>
		</TableRow>
		<TableRow>
			<Button android:text="@string/main_setup_set_ime" android:id="@+id/main_setup_btn_set_ime"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
			<Button android:text="@string/main_setup_get_dicts"
				android:id="@+id/main_setup_btn_get_dicts" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></Button>
		</TableRow>
	</TableLayout>
	<TextView android:layout_height="wrap_content" android:id="@+id/main_description"
		android:layout_width="wrap_content"></TextView>
</LinearLayout>
