<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<Keyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:keyWidth="15%p"
    app:horizontalGap="0px"
    app:verticalGap="0px"
    app:keyHeight="@dimen/popup_key_height"
>
    <Row
        app:rowEdgeFlags="top|bottom"
    >
        <Key
            app:keyLabel="@string/popular_domain_1"
            app:keyOutputText="@string/popular_domain_1"
            app:keyEdgeFlags="left" />
        <Key
            app:keyLabel="@string/popular_domain_2"
            app:keyOutputText="@string/popular_domain_2" />
        <Key
            app:keyLabel="@string/popular_domain_3"
            app:keyOutputText="@string/popular_domain_3" />
        <Key
            app:keyLabel="@string/popular_domain_4"
            app:keyOutputText="@string/popular_domain_4"
            app:keyEdgeFlags="right" />
    </Row>
</Keyboard>
